@@ -1,3 +1,8 @@
+Wed Mar 18 16:23:32 GMT 2009    Tom Mortimer <tom@lemurconsulting.com>
+
+    * unittests/runtests.php: Allow individual test cases to be run.
+    * flaxerrors.php: Added FlaxDocumentError class.
+
 Wed Mar 18 13:51:11 GMT 2009    Tom Mortimer <tom@lemurconsulting.com>
 
     * flaxclient.php: Fixed typo.
